--- a/fp8_training/configs/config.yaml
+++ b/fp8_training/configs/config.yaml
@@ -1,22 +1,16 @@
-# Default configuration for GPT2 FP8 pretraining with Transformer Engine
-# Can be overridden via Hydra command-line, e.g.:
-# python -m fp8_training.pretrain_gpt2_fp8 model_name=gpt2-m num_epochs=1
+# Hydra defaults: load model preset and training defaults
+defaults:
+  - gpt2s
+  - training: default
 
-model_name: gpt2-s
-dataset_name: openwebtext
+# Dataset Configuration (still kept in the main config so users can override easily)
+dataset:
+  name: openwebtext
+  val_split: 0.2
+  max_seq_length: 1024
 
-learning_rate: 1e-3
-per_device_batch_size: 8
-num_epochs: 3
-max_steps: -1
-warmup_steps: 2000
-weight_decay: 0.01
-gradient_accumulation_steps: 40
-max_seq_length: 1024
-seed: 42
-val_split: 0.2
+# Optimization & Hardware Configuration
+optimization:
+  use_fp8: true
+  swanlab_log: true
 
-# Output and instrumentation
-output_dir: ./fp8_gpt2_output
-use_fp8: true
-swanlab_log: true
